--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
-    "@unimodules/react-native-adapter": "^6.3.5",
-    "expo": "^40.0.1",
-    "expo-asset": "^8.3.3",
-    "expo-file-system": "^9.3.0",
-    "expo-font": "^9.2.1",
+    "@unimodules/react-native-adapter": "~6.2.2",
+    "expo": "^41.0.0",
+    "expo-asset": "~8.3.1",
+    "expo-file-system": "~11.0.2",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
-    "expo-updates": "^0.4.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.3",
-    "react-native-get-random-values": "^1.7.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.3.0",
-    "react-native-screens": "~3.5.0",
-    "react-native-web": "~0.17.1"
+    "expo-updates": "~0.5.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@types/react": "~17.0.17",
-    "@types/react-native": "~0.64.13",
+    "@babel/core": "~7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "expo-module-scripts": "^2.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
