--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
     "@unimodules/react-native-adapter": "~6.3.4",
@@ -24,6 +25,8 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.5.0",
     "react-native-web": "~0.17.1"
   },
