--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.5.0",
-    "react-native-web": "~0.17.1"
+    "react-native-web": "~0.17.1",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@babel/core": "~7.15.0",
