--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.5.0",
+    "react-native-ui-lib": "^5.30.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.17.1",
     "react-redux": "^7.2.4"
